--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,33 @@
 .weatherborder {
-  max-width: 600px;
+  max-width: 700px;
   margin: 30px auto;
   padding: 20px;
-  border: 1px solid ##dadde1;
-  border-radius: 10px;
+  border: 1px #3d75d7 solid;
+  border-radius: 5px;
+  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+}
+
+.container {
+  position: relative;
+  font-family: Helvetica, Arial, Sans-Serif;
+  color: #454545;
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #3d75d7;
+}
+
+li {
+  list-style: none;
+}
+
+.main {
+  margin: 0;
+  padding: 0;
+}
+.row {
+  padding: 20px;
 }
