--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 .weatherborder {
-  max-width: 700px;
+  max-width: 800px;
   margin: 30px auto;
   padding: 20px;
   border: 1px #3d75d7 solid;
@@ -30,4 +30,8 @@ li {
 }
 .row {
   padding: 20px;
+}
+.city {
+  font-size: 25px;
+  font-weight: bold;
 }
