Font color change to grey

--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
 .container {
   position: relative;
   font-family: Helvetica, Arial, Sans-Serif;
-  color: #454545;
+  color: #8c8d8e;
   padding: 0;
   margin: 0;
 }
