--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@
 }
 
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, Sans-serif;
   color: #549edf;
 }
 
@@ -43,8 +43,14 @@ li {
 
 .units {
   font-size: 30px;
+  color: #549edf;
 }
 .mainimage {
-  width: 50px;
+  width: 60px;
   height: auto;
+}
+
+.grados {
+  font-size: 20px;
+  font-style: ;
 }
